2015-02-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Xfer.swg: Fox for swig-3.0.5

2015-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/common/common_functions.sh: Use systemctl to restart
	  xinetd.

2015-02-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: Remove amdump file older than 30 days if
	  there is no corresponding log file.
	* server-src/amtrmlog.c: Remove amdump file when removing log file.

2015-02-11  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/element-glue.c: Fix crc computation.

2015-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ssh-security.c (ssh_connect): Use the name from the
	  disklist, no need to find the canonical name.

2015-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-util.c: Fix memory allocation issue.

2015-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Support include in backup mode.

2015-01-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix state file update.

2015-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Parse new AWS4 STORAGE-API.
	* device-src/s3-util.c (s3_compute_sha256_hash_ba,
	  s3_compute_sha256_hash, EncodeHMACSHA256, s3_tohex): New function.
	* device-src/s3-util.h (s3_compute_sha256_hash_ba,
	  s3_compute_sha256_hash, EncodeHMACSHA256,
	  s3_tohex): New prototypes.
	* device-src/s3.c: Compute signature for AWS4.
	* device-src/s3.h (S3_api): Add S3_API_UNKNOWN and S3_API_AWS4.
	* man/xml-source/amanda-devices.7.xml (STORAGE_API): Document AWS4.

2015-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c (print_platform): Detect BSD variant, Do not
	  execute /usr/bin/sw_vers if it doesn't exists.

2015-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amreport.pl, perl/Amanda/DB/Catalog.pm,
	  perl/Amanda/Logfile.swg, server-src/amdump.pl,