@@ -1,5 +1,9 @@
+2015-02-18  Jean-Louis Martineau <martineau@zmanda.com>
+	* man/xml-source/amadmin.8.xml: Document tape --days.
+	* server-src/amadmin.c: Fix --days intape command.
+
 2015-02-15  Jean-Louis Martineau <martineau@zmanda.com>
-	* perl/Amanda/Xfer.swg: Fox for swig-3.0.5
+	* perl/Amanda/Xfer.swg: Fix for swig-3.0.5
 
 2015-02-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* packaging/common/common_functions.sh: Use systemctl to restart
